// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`moderation reporting creates reports of a DM chat. 1`] = `
[
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 14,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(0)",
    "subject": {
      "$type": "chat.bsky.convo.defs#messageRef",
      "convoId": "testconvoid1",
      "did": "user(1)",
      "messageId": "testmessageid1",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 16,
    "reason": "defamation",
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(1)",
    "subject": {
      "$type": "chat.bsky.convo.defs#messageRef",
      "convoId": "",
      "did": "user(1)",
      "messageId": "testmessageid2",
    },
  },
]
`;

exports[`moderation reporting creates reports of a record. 1`] = `
[
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 7,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(0)",
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 9,
    "reason": "defamation",
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(1)",
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(1)",
      "uri": "record(1)",
    },
  },
]
`;

exports[`moderation reporting creates reports of a repo. 1`] = `
[
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 1,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(0)",
    "subject": {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(1)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 3,
    "reason": "impersonation",
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(2)",
    "subject": {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(1)",
    },
  },
]
`;
